[package]
name = "hunt_mmr_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
colored = "2.0.0"
fns = "0.0.7"
lazy_static = "1.4.0"
notify = { version = "6.0.0", features = ["serde"] }
regex = "1.8.4"
roxmltree = "0.18.0"
serde = "1.0.164"
serde_json = "1.0.96"
